# hermes-jarvis-voice-clone

./: .gitignore  MODELS.md  README.md  SBOM.json  pyproject.toml
models/: checksums.json  jarvis-clone-trimmed.txt  jarvis_ptbr_user.onnx
models/voice-instance/ref_texts/: jarvis-clone.txt
skills/jarvis-voice-clone/: SKILL.md
src/hermes_jarvis_voice_clone/: __init__.py  config.py  plugin.py
tests/: test_smoke.py
