[build-system]
requires = ["setuptools>=77.0,<83"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-jarvis-voice-clone"
version = "1.0.0"
description = "Voice model jarvis-clone-trimmed (ONNX + config) para hermes-agent"
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [{ name = "Will Zapprosite" }]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  "hermes-agent>=0.16.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
  "pytest-asyncio>=0.23",
  "mypy>=1.10",
  "ruff>=0.6",
]

[project.entry-points."hermes_agent.plugins"]
hermes_jarvis_voice_clone = "hermes_jarvis_voice_clone.plugin:jarvisvoiceclonePlugin"

[tool.setuptools.packages.find]
where = ["src"]
